@@ -3,6 +3,7 @@
 	look for a new start only after an end, instead of right after the
 	last start.  This fixes bug #45525 and bug #41313 on Savannah.
 	* src/nano.c, src/text.c, src/winio.c: Adjust some comments.
+	* doc/faq.html: Fix a few typos and make some updates for 2.4.*.
 
 2015-07-17  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (open_buffer): Verify that a named and existing file
